--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@angular/router": "^19.2.0",
     "@primeng/themes": "^19.1.3",
     "@supabase/supabase-js": "^2.49.8",
+    "devicon": "^2.16.0",
+    "emailjs-com": "^3.2.0",
+    "github-calendar": "^2.3.4",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
     "primeng": "^19.1.3",
