--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,5 @@
       "destination": "/index.html"
     }
   ],
-  "cleanUrls": true,
-  "trailingSlash": false,
-  "outputDirectory": "dist/my-portfolio"
+  "outputDirectory": "dist/my-portfolio/browser"
 }
